--- a/examples/demo/views/buttons/buttons.html
+++ b/examples/demo/views/buttons/buttons.html
@@ -1,87 +1,4 @@
-    <button class="m-button m-button-secondary">
-        <span class="m-icon-add-circle-small"></span>
-        Secondary
-        <span class="m-icon-add-circle-small"></span>
-    </button>
-    <div class="m-button m-button-default">
-        <span class="m-icon-add-circle-small"></span>
-        Default
-        <span class="m-icon-add-circle-small"></span>
-    </div>
-
-    
-    <input type="submit" value="Unspecified" class="m-button" />
-
-    <input type="submit" value="Unspecified" class="m-button-outline" />
-    <input type="submit" value="Unspecified" class="m-button-small" />
-    <input type="submit" value="Unspecified" class="m-button-outline-small" />
-
-    <br><br>
-    <input type="submit" value="Default" class="m-button m-button-gray" />
-    <input type="submit" value="Default" class="m-button-outline m-button-gray" />
-    <input type="submit" value="Default" class="m-button-small m-button-gray" />
-    <input type="submit" value="Default" class="m-button-outline-small m-button-gray" />
-    <br><br>
-    <input type="submit" value="Primary" class="m-button m-button-primary" />
-    <input type="submit" value="Primary" class="m-button-outline m-button-primary" />
-    <input type="submit" value="Primary" class="m-button-small m-button-primary" />
-    <input type="submit" value="Primary" class="m-button-outline-small m-button-primary" />
-    <br><br>
-    <input type="submit" value="Success" class="m-button m-button-success" />
-    <input type="submit" value="Success" class="m-button-outline m-button-success" />
-    <input type="submit" value="Success" class="m-button-small m-button-success" />
-    <input type="submit" value="Success" class="m-button-outline-small m-button-success" />
-    <br><br>
-    <input type="submit" value="Warning" class="m-button m-button-warning" />
-    <input type="submit" value="Warning" class="m-button-outline m-button-warning" />
-    <input type="submit" value="Warning" class="m-button-small m-button-warning" />
-    <input type="submit" value="Warning" class="m-button-outline-small m-button-warning" />
-    <br><br>
-    <input type="submit" value="Info" class="m-button m-button-info" />
-    <input type="submit" value="Info" class="m-button-outline m-button-info" />
-    <input type="submit" value="Info" class="m-button-small m-button-info" />
-    <input type="submit" value="Info" class="m-button-outline-small m-button-info" />
-    <br><br>
-    <input type="submit" value="Danger" class="m-button m-button-danger    " />
-    <input type="submit" value="Danger" class="m-button-outline m-button-danger" />
-    <input type="submit" value="Danger" class="m-button-small m-button-danger" />
-    <input type="submit" value="Danger" class="m-button-outline-small m-button-danger" />
-    <br><br>
-    <input type="submit" value="White" class="m-button m-button-white" />
-    <input type="submit" value="White" class="m-button-outline m-button-white" />
-    <input type="submit" value="White" class="m-button-small m-button-white" />
-    <input type="submit" value="White" class="m-button-outline-small m-button-white" />
-    <br><br>
-
-
-
-    <input type="submit" value="Unspecified" class="m-button-fullwidth" />
-    <br><br>
-    <input type="submit" value="Unspecified" class="m-button-outline-fullwidth" />
-    <br><br>
-
-    <input type="submit" value="Default" class="m-button-fullwidth m-button-primary" />
-    <br><br>
-    <input type="submit" value="Default" class="m-button-outline-fullwidth m-button-primary" />
-    <br><br>
-
-    <input type="submit" value="Success" class="m-button-fullwidth m-button-success" />
-    <br><br>
-    <input type="submit" value="Success" class="m-button-outline-fullwidth m-button-success" />
-    <br><br>
-    <input type="submit" value="Warning" class="m-button-fullwidth m-button-warning" />
-    <br><br>
-    <input type="submit" value="Warning" class="m-button-outline-fullwidth m-button-warning" />
-    <br><br>
-    <input type="submit" value="Info" class="m-button-fullwidth m-button-info" />
-    <br><br>
-    <input type="submit" value="Info" class="m-button-outline-fullwidth m-button-info" />
-    <br><br>
-    <input type="submit" value="Danger" class="m-button-fullwidth m-button-danger" />
-    <br><br>
-    <input type="submit" value="Danger" class="m-button-outline-fullwidth m-button-danger" />
-    <br><br>   
-    <input type="submit" value="white" class="m-button-fullwidth m-button-white" />
-    <br><br>
-    <input type="submit" value="White" class="m-button-outline-fullwidth m-button-white" />
-    <br><br>
+<div id="buttons_container_m-button" class="buttons_container"></div>
+<div id="buttons_container_m-button-auto" class="buttons_container"></div>
+<div id="buttons_container_m-button-block" class="buttons_container"></div>
+<div id="buttons_container_m-button-fullwidth" class="buttons_container"></div>
