Some work on fonts. New text view in demo app.

--- a/source/css/_fonts.scss
+++ b/source/css/_fonts.scss
@@ -1,3 +1,69 @@
-& {
-    font-family: arial;
+/* This is temporary! */
+@import url(http://fonts.googleapis.com/css?family=Roboto:100,Roboto:300,300italic,400italic,400,700,700italic);
+
+&,
+p {
+    font-family: 'Helvetica Neue Light', Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 14pt;
+    line-height: 140%;
+    @extend .m-color-black;
+}
+
+strong {
+	font-weight: 700;
+}
+
+q, blockquote {
+    font-family: 'Helvetica Neue Light Italic', Roboto, sans-serif;
+   	font-style: italic;
+    font-weight: 100;	
+    font-size: 12pt;
+}
+
+a {
+    font-family: 'Helvetica Neue Bold', Roboto, sans-serif;
+    font-weight: 700;	
+    @extend .m-color-primary;
+    text-decoration: underline;
+}
+
+
+h1,h2,h3,h4,h5,h6 {
+	line-height: 200%;	
+}
+
+h1 {
+    font-size: 16pt;
+    font-weight: 400;
+    font-family: 'Helvetica Neue Medium', Roboto, sans-serif;
+}
+
+h2 {
+    font-size: 14pt;
+    font-weight: 400;
+    font-family: 'Helvetica Neue Medium', Roboto, sans-serif;
+}
+
+h3 {
+
+}
+
+
+h4 {
+    font-size: 12pt;
+    font-weight: 300;
+}
+
+h5 {
+    font-size: 12pt;
+    color: #666;
+    font-weight: 300;
+}
+
+h6 {
+    font-size: 11pt;
+    font-family: 'Helvetica Neue Roman', Roboto, sans-serif;
+    color: #666;
+    font-weight: 100;
 }
