--- a/examples/demo/views/index/index.html
+++ b/examples/demo/views/index/index.html
@@ -20,5 +20,9 @@
              <span class="m-icon-music"></span>
              Colors
         </a>
+        <a href="#text">
+             <span class="m-icon-text"></span>
+             Text
+        </a>
     </nav>
 </div>
