Uncommited work on buttons after the GIT CRASH.

--- a/examples/demo/views/buttons/buttons.html
+++ b/examples/demo/views/buttons/buttons.html
@@ -1,4 +1,1 @@
-<div id="buttons_container_m-button" class="buttons_container"></div>
-<div id="buttons_container_m-button-auto" class="buttons_container"></div>
-<div id="buttons_container_m-button-block" class="buttons_container"></div>
-<div id="buttons_container_m-button-fullwidth" class="buttons_container"></div>
+<div id="buttons_container" class="buttons_container"></div>
