+ CSS and JavaScript draft for UIFormDraw

--- a/examples/demo/views/index/index.html
+++ b/examples/demo/views/index/index.html
@@ -21,8 +21,12 @@
              Colors
         </a>
         <a href="#text">
-             <span class="m-icon-text"></span>
+             <span class="m-icon-edit"></span>
              Text
+        </a>
+        <a href="#draw">
+             <span class="m-icon-erase"></span>
+             Draw
         </a>
     </nav>
 </div>
