--- a/source/css/_fonts.scss
+++ b/source/css/_fonts.scss
@@ -1,5 +1,6 @@
 /* This is temporary! */
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,Roboto:300,300italic,400italic,400,700,700italic);
+@import "colors";
 
 &,
 p {
