Fixes for UISelect UIForm and work on UINavBar

--- a/source/css/_uifooter.scss
+++ b/source/css/_uifooter.scss
@@ -1,8 +1,6 @@
 .m-footer-container {
+    @extend .m-nav;
 
-    height: 55px;
-    position: fixed;
-    width: 100%;
     bottom: 0;
             
     footer {
