--- a/source/css/_uiheader.scss
+++ b/source/css/_uiheader.scss
@@ -1,8 +1,5 @@
 .m-header-container {
-
-    height: 55px;
-    position: relative;
-    width: 100%;
+    @extend .m-nav;
         
     header {
         z-index: 100;
