--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -1,47 +1,47 @@
-<form class="m-form m-form-top-labels">
+<form class="m-form">
+    <fieldset class="m-form-top-labels">
 
-    <div class="m-field">
-        <label>Text</label>
-        <input class="m-text" placeholder="Text here" />
-    </div>
+        <div class="m-field">
+            <label>Text</label>
+            <input class="m-text" placeholder="Text here" />
+        </div>
 
-    <div class="m-field">
-        <label>TextArea</label>
-        <textarea class="m-textarea" placeholder="Text here"></textarea>
-    </div>
+        <div class="m-field">
+            <label>TextArea</label>
+            <textarea class="m-textarea" placeholder="Text here"></textarea>
+        </div>
 
-    <div class="m-field">
-        <label>Select</label>
-        <select class="m-select">
-            <option value="01">Option 1</option>
-            <option value="02" selected>Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2</option>
-            <option value="03">Option 3</option>
-        </select>
-    </div>
+        <div class="m-field">
+            <label for="select1">Select</label>
+            <select class="m-select" id="select1">
+                <option value="01">Option 1</option>
+                <option value="02" selected>Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2Option 2</option>
+                <option value="03">Option 3</option>
+            </select>
+        </div>
+    </fieldset>
 
-</form>
+    <fieldset class="m-form-left-labels">
 
-<form class="m-form m-form-left-labels">
+        <div class="m-field">
+            <label>Text</label>
+            <input class="m-text" placeholder="Text here" />
+        </div>
 
-    <div class="m-field">
-        <label>Text</label>
-        <input class="m-text" placeholder="Text here" />
-    </div>
+        <div class="m-field">
+            <label>TextArea</label>
+            <textarea class="m-textarea" placeholder="Text here"></textarea>
+        </div>
 
-    <div class="m-field">
-        <label>TextArea</label>
-        <textarea class="m-textarea" placeholder="Text here"></textarea>
-    </div>
-
-    <div class="m-field">
-        <label>Select</label>
-        <select class="m-select">
-            <option value="01">Option 1</option>
-            <option value="02" selected>Option 2</option>
-            <option value="03">Option 3</option>
-        </select>
-    </div>
-    
-    <input type="submit" class="m-button" />
-
+        <div class="m-field">
+            <label for="select2">Select</label>
+            <select class="m-select" id="select2">
+                <option value="01">Option 1</option>
+                <option value="02" selected>Option 2</option>
+                <option value="03">Option 3</option>
+            </select>
+        </div>
+        
+        <input type="submit" class="m-button" />
+    </fieldset>
 </form>
