--- a/source/css/_uiform.scss
+++ b/source/css/_uiform.scss
@@ -1,10 +1,10 @@
 @mixin m-all-fields($class) {
-    &.m-form-left-labels {
+    .m-form-left-labels {
         .#{$class} {
             width: 70%;
         }
     }
-    &.m-form-top-labels {
+    .m-form-top-labels {
         .#{$class} {
             width: 100%;
             display: block;
@@ -36,7 +36,7 @@
 }
 
 .m-form {
-    &.m-form-left-labels .m-field {
+    .m-form-left-labels .m-field {
         overflow: hidden;
 
         label {
@@ -44,7 +44,7 @@
             width: 30%;
         }  
     } 
-    &.m-form-top-labels .m-field {
+    .m-form-top-labels .m-field {
         label {
             width: 100%;
             display: block;
@@ -60,6 +60,7 @@
             font-weight: bold;
             font-size: 1em;
             line-height: 1.5em;
+            overflow-wrap: break-word;
         }
         &.m-error {
            label {
